# Chat-with-SQL-DB

./: app.py  main.py  pyproject.toml  requirements.txt  sqllite.py  student.db
